# ontol-workbench

./: .dockerignore  .gitignore  README.md  build.sh  pyproject.toml  requirements-ai.txt  requirements-core.txt
deploy/: app.py  requirements.txt
docs/: GRAMMAR.md  IMPORT_WITH_RELATIONSHIPS.md  REPORT.md  SETUP.md
examples/multifile_demo/: full.ontol  main.ontol  operations.ontol  relations.ontol
src/ontol/: ai.py  auth.py  parser.py  plantuml.py  project.py
src/ontol-v1/: pyproject.toml  requirements-core.txt
src/ontol-v1/examples/multifile_demo/: base.ontol
src/ontol-v1/ontol/: __init__.py  ai.py  oast.py  parser.py  plantuml.py
src/ontol-v3/: .gitignore  PROJECT_DOCUMENTATION.md  README.md  pyproject.toml  requirements.txt
src/ontol-v3/examples/: README_errors.md  diagrams_uml.puml  error_cycle.tdl  error_multiple_inheritance.tdl  error_unknown_class_assoc.tdl  error_unknown_general.tdl  error_unknown_type_attr.tdl  example.tdl  imported_examples.py  test_parser.py  uml_dsl_examples.py
src/ontol-v3/examples/diagrams_uml_tdl/: diagram_1_1.tdl  diagram_1_2.tdl  diagram_1_3.tdl  diagram_1_4.tdl  diagram_1_5.tdl  diagram_1_6.tdl  diagram_1_7.tdl  diagram_1_8.tdl  diagram_1_9.tdl
src/ontol-v3/uml_dsl/: __init__.py  app.py  diagram.py  enums.py  export.py  graphviz_render.py  models.py  relationships.py  svg_parser.py  tdl_ast.py  tdl_build.py  tdl_lexer.py  tdl_parser.py  tdl_run.py
tests/: test_auth.py  test_plantuml_generator.py  test_project.py
v1-streamlit/: README.md  app.py  requirements.txt
v2-service/: .env.example  README.md  docker-compose.ai.yml  docker-compose.yml
v2-service/backend/: .env.example  Dockerfile  alembic.ini  requirements-dev.txt  requirements.txt
v2-service/backend/alembic/: env.py
v2-service/backend/alembic/versions/: e168b259fbb3_init_users.py  e5bae891668a_projects_and_files.py
v2-service/backend/app/: config.py  db.py  main.py  queue.py  worker.py
v2-service/backend/app/api/: __init__.py  ai.py  build.py  deps.py  files.py  projects.py
v2-service/backend/app/auth/: __init__.py  backend.py  users.py
v2-service/backend/app/models/: __init__.py  file.py  project.py  user.py
v2-service/backend/app/schemas/: __init__.py  ai.py  build.py  file.py  project.py  user.py
v2-service/backend/app/services/: __init__.py  ai.py  render.py  render_v3.py
v2-service/backend/tests/: conftest.py  test_ai.py  test_auth.py  test_build.py  test_files.py  test_projects.py  test_render_v3.py  test_worker.py
v2-service/frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
v2-service/frontend/src/: App.css  App.tsx  main.tsx
v2-service/frontend/src/api/: ai.ts  auth.ts  build.ts  client.ts  errors.ts  files.ts  projects.ts  types.ts
v2-service/frontend/src/auth/: AuthContext.tsx
v2-service/frontend/src/components/: ContextMenu.tsx  CreateFileDialog.tsx  Modal.tsx  OntolEditor.tsx  ProtectedLayout.tsx
v2-service/frontend/src/ontol-lang/: monaco-setup.ts  ontol-language.ts  tdl-language.ts
v2-service/frontend/src/pages/: LoginPage.tsx  ProjectPage.tsx  ProjectsPage.tsx  RegisterPage.tsx
v2-service/frontend/src/utils/: download.ts
