[tool.ruff.lint]
ignore = ['E722']

[tool.ruff.format]
quote-style = 'single'

[tool.ruff]
indent-width = 4

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ontol"
version = "2.5.6"
description = "A tool for parsing and visualizing ontology files written in the Ontol DSL"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Skvortsov Vladimir" },
    { name = "Aptukov Mikhail" },
    { name = "Markov Mikhail" },
    { name = "Khamidullin Ilsaf" },
    { name = "Afanasyev Andrew" },
    { name = "Andreev Daniil" }
]
license = { file = "LICENSE" }
dependencies = [
    "requests==2.32.3",
    "watchdog==3.0.0",
    "plantuml==0.3.0",
    "pytest==8.3.4",
    "six==1.17.0",
    "pytest-cov==6.0.0",
    "sly==0.5",
    "unidecode==1.3.8",
]

# Опциональный AI-стек (только для `ontol ... --gen-hierarchy`, LLM через
# Ollama/langchain). Ставится явно: `pip install -e .[ai]`. Базовая установка его
# НЕ тянет — иначе тяжёлый langchain попадал бы и в сервисный образ, где AI не
# используется. Зеркалит requirements-ai.txt.
[project.optional-dependencies]
ai = [
    "langchain==0.3.9",
    "langchain-core==0.3.21",
    "langchain-community==0.3.9",
]

[project.urls]
Repository = "https://github.com/vladimir-skvortsov/ontol"


[project.scripts]
ontol = "ontol.cli:main"
