[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uml_dsl"
version = "0.1.0"
description = "ontol-v3: Text Diagram Language (TDL) -> UML class diagrams via Graphviz"
readme = "README.md"
requires-python = ">=3.9"
# Для рендера TDL -> SVG нужен только pydantic (+ системный бинарь graphviz `dot`).
# Растровый экспорт (PNG/JPG) и веб-демо на Streamlit в сервисе не используются и
# вынесены в опциональные экстры, чтобы не тянуть тяжёлые зависимости в образ.
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
export = ["cairosvg>=2.7", "Pillow>=10.0"]
app = ["streamlit>=1.28"]

[tool.setuptools]
packages = ["uml_dsl"]
